# pizerocam

./: .gitignore  ENV_SETUP.md  README.md  __init__.py  client.py  client_settings.json  pyproject.toml  requirements.txt  server.py  test_server.py  testing_google_vision.py  vision.py
examples/: analyze_ph_multi_colorspace.py  client.py  client_settings.yaml  map_color_space_client.py  ph_color_space_examples.py  ph_read.py  photo_find_ph.py  run_server.py  simple_client.py
pHreader_client/: client.py
phTest/: pyvenv.cfg
phTest/Scripts/: activate  activate.bat  google
photo_client/: client.py  client_settings.json  vision.py
picam_server/: server.py  server_settings.json
src/image_client/: __init__.py  image_client_settings.yaml  photo_analyzer.py  photo_client.py  simple_photo_analyzer.py
src/image_req_client/: __init__.py  cli.py  image_req_client.py  ph_grid_color_reader.py  ph_read.py  photo_analyzer.py  photo_client.py  simple_photo_analyzer.py
src/image_server/: __init__.py  cli.py  image_server.py  ph_test_server.py  server.py
src/photo_client/: __init__.py  client.py  image_analyzer.py  image_client.py  vision.py
src/picam_server/: __init__.py  ph_test_server.py  server.py
utils/: logger.py  logger_settings.yaml
