[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pizerocam"
version = "0.1.0"
description='Python utils package for self-driving labs'
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = []

# More at https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: MIT",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
]

authors = [
    {name = "Yang Cao", email = "cyrilcaoyang@gmail.com"}
]

[tool.setuptools.package-dir]
image_client = 'src/image_client'
picam_server = 'src/picam_server'
